@@ -4,6 +4,7 @@ import org.rhd.api.io.fs.ApplicationFileSystem;
 
 import java.io.File;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
@@ -18,7 +19,7 @@ public class ServerFileSystem extends ApplicationFileSystem {
     private static ServerFileSystem instance = null;
 
     private final Map<String, File> cachedFileMap;
-    private final Properties searchExceptions,tableExceptions,settings;
+    private final Properties settings;
 
     public static ServerFileSystem getInstance() {
         if (instance == null)
@@ -28,22 +29,20 @@ public class ServerFileSystem extends ApplicationFileSystem {
 
     private ServerFileSystem() {
         this.cachedFileMap = new HashMap<>();
-        this.searchExceptions = new Properties();
-        this.tableExceptions = new Properties();
         this.settings = new Properties();
     }
 
     @Override
     protected void initialize() {
         super.initialize();
-        this.requireFile(Path.of(
+        this.requireFile(Paths.get(
                 this.buildFileRequest()
                         .inDirectory(ApplicationFileSystem.APP_DIRECTORY)
                         .withFileName(APP_HOME)
                         .build()
                         .getAbsolutePath()
         ));
-        this.requireFile(Path.of(
+        this.requireFile(Paths.get(
                 this.buildFileRequest()
                         .inDirectory(ApplicationFileSystem.APP_DIRECTORY)
                         .inDirectory(APP_HOME)
@@ -51,7 +50,7 @@ public class ServerFileSystem extends ApplicationFileSystem {
                         .build()
                         .getAbsolutePath()
         ));
-        this.requireFile(Path.of(
+        this.requireFile(Paths.get(
                 this.buildFileRequest()
                         .inDirectory(ApplicationFileSystem.APP_DIRECTORY)
                         .inDirectory(APP_HOME)
@@ -59,7 +58,7 @@ public class ServerFileSystem extends ApplicationFileSystem {
                         .build()
                         .getAbsolutePath()
         ));
-        this.requireFile(Path.of(
+        this.requireFile(Paths.get(
                 this.buildFileRequest()
                         .inDirectory(ApplicationFileSystem.APP_DIRECTORY)
                         .inDirectory(APP_HOME)
@@ -86,14 +85,6 @@ public class ServerFileSystem extends ApplicationFileSystem {
         File file = getFile(path);
         cachedFileMap.put(path.toAbsolutePath().toString(), file);
         return file;
-    }
-
-    public Properties getSearchExceptions() {
-        return searchExceptions;
-    }
-
-    public Properties getTableExceptions() {
-        return tableExceptions;
     }
 
     public Properties getSettings() {
